fixed small error

--- a/extract_example_test.ipynb
+++ b/extract_example_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a1c69778",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4337ec19",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fba76cab",
    "metadata": {},
    "outputs": [],
@@ -120,17 +120,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "19fd8cc6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/5000 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'start_idx' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m in_outs \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m problem_idx, problem \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28menumerate\u001b[39m(problems),total\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(problems)): \n\u001b[0;32m----> 6\u001b[0m     problem_idx \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43mstart_idx\u001b[49m\n\u001b[1;32m      7\u001b[0m     prompt_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(problem, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquestion.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(prompt_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'start_idx' is not defined"
+     ]
+    }
+   ],
    "source": [
     "non_eng = {}\n",
     "no_test = {}\n",
     "in_outs = {}\n",
     "\n",
     "for problem_idx, problem in tqdm(enumerate(problems),total=len(problems)): \n",
-    "    problem_idx += start_idx\n",
     "    prompt_path = os.path.join(problem, \"question.txt\")\n",
     "    with open(prompt_path, 'r') as file:\n",
     "        lines = file.readlines()\n",
@@ -206,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
