--- a/extract_example_test.ipynb
+++ b/extract_example_test.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_loc = 'data/APPS/test/'\n",
+    "test_loc = 'data/APPS/train/'\n",
     "problems = glob.glob(test_loc + '*')\n",
     "problems = sorted(problems) # Pin some ordering"
    ]
@@ -128,19 +128,40 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/5000 [00:00<?, ?it/s]\n"
+      "  0%|          | 0/5000 [00:00<?, ?it/s]"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'start_idx' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m in_outs \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m problem_idx, problem \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28menumerate\u001b[39m(problems),total\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(problems)): \n\u001b[0;32m----> 6\u001b[0m     problem_idx \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43mstart_idx\u001b[49m\n\u001b[1;32m      7\u001b[0m     prompt_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(problem, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquestion.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(prompt_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'start_idx' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5000/5000 [00:17<00:00, 293.56it/s]"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Non-English task: 0\n",
+      "Zero-example-test task: 2770\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nNon-English task: 17\\nZero-example-test task: 46\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -178,10 +199,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f7eda3be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of samples: (5000,)\n",
+      "Average extracted example test cases: 0.7406\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nTotal number of samples: (5000,)\\nAverage extracted example test cases: 1.9764\\n'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nb_example_tests = []\n",
     "for k,v in in_outs.items(): \n",
@@ -224,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
